--- a/tmpl85.00a/tmpl84.00a_2015.vcxproj
+++ b/tmpl85.00a/tmpl84.00a_2015.vcxproj
@@ -231,6 +231,7 @@
     <ClCompile Include="ligth.cpp" />
     <ClCompile Include="material.cpp" />
     <ClCompile Include="object.cpp" />
+    <ClCompile Include="placeable.cpp" />
     <ClCompile Include="plane.cpp" />
     <ClCompile Include="primitive.cpp" />
     <ClCompile Include="ray.cpp">
@@ -257,6 +258,7 @@
     <ClInclude Include="light.h" />
     <ClInclude Include="material.h" />
     <ClInclude Include="object.h" />
+    <ClInclude Include="placeable.h" />
     <ClInclude Include="plane.h" />
     <ClInclude Include="primitive.h" />
     <ClInclude Include="ray.h" />
