--- a/tmpl85.00a/tmpl84.00a_2015.vcxproj
+++ b/tmpl85.00a/tmpl84.00a_2015.vcxproj
@@ -229,6 +229,7 @@
     </ClCompile>
     <ClCompile Include="game.cpp" />
     <ClCompile Include="light.cpp" />
+    <ClCompile Include="mat90.cpp" />
     <ClCompile Include="material.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="placeable.cpp" />
@@ -257,6 +258,7 @@
     <ClInclude Include="camera.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="light.h" />
+    <ClInclude Include="mat90.h" />
     <ClInclude Include="material.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="placeable.h" />
