--- a/tmpl85.00a/tmpl84.00a_2015.vcxproj
+++ b/tmpl85.00a/tmpl84.00a_2015.vcxproj
@@ -225,6 +225,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="buttonHandler.cpp" />
     <ClCompile Include="camera.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
     </ClCompile>
@@ -233,6 +234,7 @@
     <ClCompile Include="light.cpp" />
     <ClCompile Include="mat90.cpp" />
     <ClCompile Include="material.cpp" />
+    <ClCompile Include="movementController.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="placeable.cpp" />
     <ClCompile Include="plane.cpp" />
@@ -258,12 +260,14 @@
     <ClCompile Include="triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="buttonHandler.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="color.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="light.h" />
     <ClInclude Include="mat90.h" />
     <ClInclude Include="material.h" />
+    <ClInclude Include="movementController.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="placeable.h" />
     <ClInclude Include="plane.h" />
