sceneBuilder does actually do something

--- a/tmpl85.00a/tmpl84.00a_2015.vcxproj
+++ b/tmpl85.00a/tmpl84.00a_2015.vcxproj
@@ -278,6 +278,7 @@
     <ClInclude Include="ray.h" />
     <ClInclude Include="raytracer.h" />
     <ClInclude Include="scene.h" />
+    <ClInclude Include="sceneBuilder.h" />
     <ClInclude Include="sphere.h" />
     <ClInclude Include="surface.h" />
     <ClInclude Include="template.h" />
