--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,5 @@ __pycache__/
 # exception for this project
 !tmpl85.00a/lib/SDL2-2.0.3/lib/x64
 !tmpl85.00a/lib/SDL2-2.0.3/lib/x86
+
+!tmpl85.00a/importOBJ/*.obj
