--- a/tmpl85.00a/tmpl84.00a_2015.vcxproj
+++ b/tmpl85.00a/tmpl84.00a_2015.vcxproj
@@ -258,6 +258,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TestJob.cpp" />
     <ClCompile Include="threads.cpp" />
     <ClCompile Include="triangle.cpp" />
   </ItemGroup>
@@ -284,6 +285,7 @@
     <ClInclude Include="sphere.h" />
     <ClInclude Include="surface.h" />
     <ClInclude Include="template.h" />
+    <ClInclude Include="TestJob.h" />
     <ClInclude Include="threads.h" />
     <ClInclude Include="triangle.h" />
   </ItemGroup>
