--- a/tmpl85.00a/tmpl84.00a_2015.vcxproj
+++ b/tmpl85.00a/tmpl84.00a_2015.vcxproj
@@ -245,6 +245,7 @@
     <ClCompile Include="placeable.cpp" />
     <ClCompile Include="plane.cpp" />
     <ClCompile Include="pointlight.cpp" />
+    <ClCompile Include="primitive.cpp" />
     <ClCompile Include="ray.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
@@ -284,6 +285,7 @@
     <ClInclude Include="placeable.h" />
     <ClInclude Include="plane.h" />
     <ClInclude Include="pointlight.h" />
+    <ClInclude Include="primitive.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="raytracer.h" />
     <ClInclude Include="scene.h" />
